--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-Lotto map Go
-Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lotto Map</title>
+</head>
+<body>
+    
+</body>
+</html>
